--- a/ui/enrollLayout.ui
+++ b/ui/enrollLayout.ui
@@ -49,14 +49,32 @@
     <string>请输入注册者名称：</string>
    </property>
   </widget>
-  <widget class="QPlainTextEdit" name="textEdit">
+  <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
      <x>190</x>
      <y>120</y>
-     <width>171</width>
-     <height>51</height>
+     <width>151</width>
+     <height>41</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="endButton">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>280</y>
+     <width>161</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>结束录音</string>
    </property>
   </widget>
  </widget>
