--- a/ui/testLayout.ui
+++ b/ui/testLayout.ui
@@ -56,7 +56,7 @@
     </font>
    </property>
    <property name="text">
-    <string>开始录音</string>
+    <string>开始测试</string>
    </property>
   </widget>
   <widget class="QPushButton" name="endButton">
@@ -74,7 +74,7 @@
     </font>
    </property>
    <property name="text">
-    <string>结束录音</string>
+    <string>结束测试</string>
    </property>
   </widget>
  </widget>
