--- a/ui/testLayout.ui
+++ b/ui/testLayout.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>514</width>
-    <height>390</height>
+    <width>533</width>
+    <height>477</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>90</y>
+     <x>170</x>
+     <y>60</y>
      <width>171</width>
      <height>51</height>
     </rect>
@@ -26,9 +26,9 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>100</y>
-     <width>101</width>
+     <x>20</x>
+     <y>70</y>
+     <width>131</width>
      <height>31</height>
     </rect>
    </property>
@@ -38,16 +38,16 @@
     </font>
    </property>
    <property name="text">
-    <string>语音识别结果：</string>
+    <string>当前语音识别结果：</string>
    </property>
   </widget>
   <widget class="QPushButton" name="recordButton">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>180</y>
-     <width>151</width>
-     <height>61</height>
+     <x>390</x>
+     <y>30</y>
+     <width>101</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
@@ -62,10 +62,10 @@
   <widget class="QPushButton" name="endButton">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>260</y>
-     <width>151</width>
-     <height>61</height>
+     <x>390</x>
+     <y>80</y>
+     <width>101</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
@@ -75,6 +75,34 @@
    </property>
    <property name="text">
     <string>结束测试</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>120</y>
+     <width>81</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>识别历史：</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="textEdit">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>160</y>
+     <width>461</width>
+     <height>271</height>
+    </rect>
    </property>
   </widget>
  </widget>
